force-app/main/default/objects/Account/fields/Custom_Id__c.field-meta.xml
<CustomField>
    <fullName>Custom_Id__c</fullName>
    <label>Custom Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>