force-app/main/default/objects/Account/fields/Days_since_LAst_Updated__c.field-meta.xml
<CustomField>
    <fullName>Days_since_LAst_Updated__c</fullName>
    <formula>Now() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since LAst Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>