force-app/main/default/objects/Account/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>DATETIMEVALUE($System.OriginDateTime)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test</label>
    <type>DateTime</type>
</CustomField>