force-app/main/default/objects/Account/fields/Test_Calc__c.field-meta.xml
<CustomField>
    <fullName>Test_Calc__c</fullName>
    <formula>0.5556*(135+(0.29*(514 *1.8+32))+(0.000161*((1.8*514 +32)^2))+(1.3*((141.5/1) -131.5-10))+(0.075*(10 -10)*1.8*(514 -232)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>