force-app/main/default/objects/Account/fields/test_encrypt__c.field-meta.xml
<CustomField>
    <fullName>test_encrypt__c</fullName>
    <label>test encrypt</label>
    <length>45</length>
    <type>Text</type>
</CustomField>