force-app/main/default/objects/Account/fields/test_erc__c.field-meta.xml
<CustomField>
    <fullName>test_erc__c</fullName>
    <label>test erc</label>
    <length>34</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>